# Lab01_PART2_18206686

./: .env.example  .gitignore  Dockerfile  README.md  dependencies_frozen.txt  docker-compose.yml  generated_dependencies.txt  init.sql  main.py  pyproject.toml  requirements.txt  uv.lock.txt
config/: docker_commands.bat  docker_commands.sh  docker_diagnostics.ps1
data_gold/: gold.py  relatorio_gold.md
data_silver/: fertility_silver.parquet  relatorio_silver.md  silver.py
docs/: DOCKER_ARCHITECTURE.md  GRAFANA_ARQUITETURA.md  VALIDACAO_IMPLEMENTADA.md
grafana/dashboards/: fertility-main-simple.json  fertility-main.json  fertility-simple.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: postgresql.yaml
gx_context/data_docs/: index.html
src/: __init__.py  ingest_data.py  setup_great_expectations.py
